--- a/www/templates/myAppointments.html
+++ b/www/templates/myAppointments.html
@@ -4,8 +4,8 @@
             <div class="list card list-inset">
                 <a class="item item-avatar" href="#">
                     <img src="http://dummyimage.com/100x100/d6d6d6/0006b0.png&amp;text=Trainer+photo">
-                    <h2>Trainer Name</h2>
-                    <p>8 slots avaliable</p>
+                    <h2>Artem Davidchenko</h2>
+                    <p>Trainer</p>
                 </a>
                 <a class="item item-icon-right" href="#">
                     Call +380 00 123 11 11
@@ -13,12 +13,10 @@
                 </a>
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
-                    <span class="badge badge-assertive">4</span>
                 </div>
-                <a class="item item-icon-right item-icon-left" href="#">
+                <a class="item item-icon-left" href="#">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 11:00
-                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
             </div>
         </div>
@@ -32,15 +30,6 @@
                 <a class="item item-icon-right" href="#">
                     Call +380 00 123 11 11
                     <i class="icon ion-ios-telephone-outline"></i>
-                </a>
-                <div class="item item-divider">
-                    Monday, 25 Apr 2016
-                    <span class="badge badge-assertive">4</span>
-                </div>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    10:00 - 11:00
-                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
@@ -64,15 +53,6 @@
                 <a class="item item-icon-right" href="#">
                     Call +380 00 123 11 11
                     <i class="icon ion-ios-telephone-outline"></i>
-                </a>
-                <div class="item item-divider">
-                    Monday, 25 Apr 2016
-                    <span class="badge badge-assertive">4</span>
-                </div>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    10:00 - 11:00
-                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
