--- a/www/templates/scheduleTrainer.html
+++ b/www/templates/scheduleTrainer.html
@@ -15,12 +15,12 @@
                     Monday, 25 Apr 2016
                     <span class="badge badge-assertive">4</span>
                 </div>
-                <a class="item item-icon-right item-icon-left" href="#">
+                <a class="item item-icon-right item-icon-left" ng-click="showConfirm()">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 11:00
                     <i class="icon ion-ios-arrow-forward"></i>
                 </a>
-                <a class="item item-icon-right item-icon-left" href="#">
+                <a class="item item-icon-right item-icon-left" ng-click="showConfirm()">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 12:00
                     <i class="icon ion-ios-arrow-forward"></i>
