--- a/www/templates/trainers.html
+++ b/www/templates/trainers.html
@@ -14,62 +14,62 @@
 
         <div class="list">
 
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Artem Davidchenko</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Maria Startseva</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Владимир Александрович</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
             </a>
-            <a class="item item-avatar" href="#">
+            <a class="item item-avatar" ui-sref="tabsController.scheduleTrainer">
                 <img src="http://dummyimage.com/100x100/000/fff">
                 <h2>Lorem ipsum</h2>
                 <p>5 slots available</p>
