--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,9 +1,9 @@
-<ion-view title="Login" id="page7">
-    <ion-content padding="true" class="has-header">
+<ion-view hide-nav-bar="true" id="page7">
+    <ion-content padding="true" class="no-header">
         <form class="list">
             <ion-list>
                 <label class="item item-input">
-                    <span class="input-label">Username</span>
+                    <span class="input-label">E-mail</span>
                     <input type="text" placeholder="">
                 </label>
                 <label class="item item-input">
