Update ui. Disable Weinre

--- a/www/templates/myAppointments.html
+++ b/www/templates/myAppointments.html
@@ -1,7 +1,7 @@
-<ion-view title="My appointments" id="page6">
+<ion-view title="Events" id="page6">
     <ion-content padding="false" class="has-header">
-        <div>
-            <div class="list card list-inset">
+
+            <div class="list stable-border" style="border-bottom-width: 15px; border-bottom-style: solid; margin-bottom: 0">
                 <a class="item item-avatar" href="#">
                     <img src="http://dummyimage.com/100x100/d6d6d6/0006b0.png&amp;text=Trainer+photo">
                     <h2>Artem Davidchenko</h2>
@@ -14,14 +14,14 @@
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
                 </div>
-                <a class="item item-icon-left" href="#">
+                <a class="item item-icon-right item-icon-left">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 11:00
+                    <i class="icon ion-ios-checkmark balanced"></i>
                 </a>
             </div>
-        </div>
-        <div>
-            <div class="list card list-inset">
+
+            <div class="list stable-border" style="border-bottom-width: 15px; border-bottom-style: solid; margin-bottom: 0">
                 <a class="item item-avatar" href="#">
                     <img src="http://dummyimage.com/100x100/d6d6d6/0006b0.png&amp;text=Trainer+photo">
                     <h2>Trainer Name</h2>
@@ -33,18 +33,16 @@
                 </a>
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
-                    <span class="badge badge-assertive">4</span>
                 </div>
-                <a class="item item-icon-right item-icon-left" href="#">
+                <a class="item item-icon-right item-icon-left">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 11:00
-                    <i class="icon ion-ios-arrow-forward"></i>
+                    <i class="icon ion-ios-checkmark balanced"></i>
                 </a>
 
             </div>
-        </div>
-        <div>
-            <div class="list card list-inset">
+
+            <div class="list stable-border" style="border-bottom-width: 15px; border-bottom-style: solid; margin-bottom: 0">
                 <a class="item item-avatar" href="#">
                     <img src="http://dummyimage.com/100x100/d6d6d6/0006b0.png&amp;text=Trainer+photo">
                     <h2>Trainer Name</h2>
@@ -56,15 +54,13 @@
                 </a>
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
-                    <span class="badge badge-assertive">4</span>
                 </div>
-                <a class="item item-icon-right item-icon-left" href="#">
+                <a class="item item-icon-right item-icon-left">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 11:00
-                    <i class="icon ion-ios-arrow-forward"></i>
+                    <i class="icon ion-ios-checkmark balanced"></i>
                 </a>
-
             </div>
-        </div>
+
     </ion-content>
 </ion-view>
