--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -6,7 +6,7 @@
         <ion-tab title="Stream" icon="ion-social-rss" href="#/main/stream">
             <ion-nav-view name="tab1"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Appointments" icon="ion-calendar" href="#/main/my-appointments">
+        <ion-tab title="Events" icon="ion-calendar" href="#/main/my-appointments">
             <ion-nav-view name="tab2"></ion-nav-view>
         </ion-tab>
         <ion-tab title="Account" icon="ion-ios-contact" href="#/main/account">
