--- a/app/components/scheduleTrainer/scheduleView.html
+++ b/app/components/scheduleTrainer/scheduleView.html
@@ -13,12 +13,27 @@
                 </a>
                 <div class="item item-divider">
                     Monday, 25 Apr 2016
-                    <span class="badge badge-assertive">3</span>
+                    <span class="badge badge-assertive">4</span>
                 </div>
                 <a class="item item-icon-right item-icon-left" ng-click="showConfirm()">
                     <i class="icon ion-ios-clock-outline"></i>
+                    10:00 - 11:00
+                    <i class="icon ion-ios-arrow-forward"></i>
+                </a>
+                <a class="item item-icon-right item-icon-left" ng-click="showConfirm()">
+                    <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 12:00
-                    <i class="icon ion-ios-checkmark balanced"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
+                </a>
+                <a class="item item-icon-right item-icon-left" href="#">
+                    <i class="icon ion-ios-clock-outline"></i>
+                    12:00 - 13:00
+                    <i class="icon ion-ios-arrow-forward"></i>
+                </a>
+                <a class="item item-icon-right item-icon-left" href="#">
+                    <i class="icon ion-ios-clock-outline"></i>
+                    13:00 - 14:00
+                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
                 <div class="item item-divider">
                     Tuesday, 26 Apr 2016
@@ -27,66 +42,22 @@
                 <a class="item item-icon-right item-icon-left" href="#">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 11:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
                 <a class="item item-icon-right item-icon-left" href="#">
                     <i class="icon ion-ios-clock-outline"></i>
                     10:00 - 12:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
                 <a class="item item-icon-right item-icon-left" href="#">
                     <i class="icon ion-ios-clock-outline"></i>
                     12:00 - 13:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
                 <a class="item item-icon-right item-icon-left" href="#">
                     <i class="icon ion-ios-clock-outline"></i>
                     13:00 - 14:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <div class="item item-divider">
-                    Friday, 27 Apr 2016
-                    <span class="badge badge-assertive">8</span>
-                </div>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    10:00 - 11:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    10:00 - 12:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    12:00 - 13:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    13:00 - 14:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    10:00 - 11:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    10:00 - 12:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    12:00 - 13:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
-                </a>
-                <a class="item item-icon-right item-icon-left" href="#">
-                    <i class="icon ion-ios-clock-outline"></i>
-                    13:00 - 14:00
-                    <i class="icon ion-ios-checkmark-outline"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
                 </a>
             </div>
         </div>
