--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -3,16 +3,16 @@
         <form class="list">
             <ion-list>
                 <label class="item item-input">
-                    <span class="input-label">{{"hello_message" | translate}}</span>
+                    <span class="input-label">E-mail</span>
                     <input type="text" placeholder="">
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">{{"goodbye_message" | translate}}</span>
+                    <span class="input-label">Password</span>
                     <input type="password" placeholder="">
                 </label>
             </ion-list>
             <div class="spacer" style="height: 40px;"></div>
-            <a ui-sref="tabsController.trainers" id="login-button4" class="button button-stable  button-block">Log in</a>
+            <a ui-sref="tabsController.scheduleTrainer" id="login-button4" class="button button-stable  button-block">Log in</a>
             <a ui-sref="signup" id="login-button5" class="button button-positive  button-block button-clear">Or create an account</a>
         </form>
     </ion-content>
