--- a/www/views/components/myEvents/eventsView.html
+++ b/www/views/components/myEvents/eventsView.html
@@ -1,4 +1,4 @@
-<ion-view title="My appointments" id="page6">
+<ion-view title="My Events" id="page6">
     <ion-content padding="false" class="has-header">
         <div>
             <div class="list card list-inset">
