--- a/www/views/components/login/loginView.html
+++ b/www/views/components/login/loginView.html
@@ -3,11 +3,11 @@
         <form class="list">
             <ion-list>
                 <label class="item item-input">
-                    <span class="input-label">E-mail</span>
+                    <span class="input-label">{{"email" | translate}}</span>
                     <input type="text" placeholder="">
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Password</span>
+                    <span class="input-label">{{"password" | translate}}</span>
                     <input type="password" placeholder="">
                 </label>
             </ion-list>
