--- a/app/components/account/accountView.html
+++ b/app/components/account/accountView.html
@@ -1,22 +1,22 @@
-<ion-view title="Account" id="page4">
+<ion-view title="Account">
     <ion-content padding="true" class="has-header">
         <div>
             <div class="list" style="margin: -10px -10px 0 -10px;">
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">{{"accName" | translate}}</span>
-                    <input type="text" placeholder="John">
+                    <input type="text" ng-model="vm.user.firstName">
                 </label>
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">{{"accSurname" | translate}}</span>
-                    <input type="text" placeholder="Suhr">
+                    <input type="text" ng-model="vm.user.lastName">
                 </label>
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">{{"email" | translate}}</span>
-                    <input type="text" placeholder="john@suhr.com">
+                    <input type="text" ng-model="vm.user.email">
                 </label>
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">{{"phone" | translate}}</span>
-                    <input type="text" placeholder="+380 (97) 123 12 12">
+                    <input type="text" ng-model="vm.user.information.phone">
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
@@ -27,10 +27,8 @@
                         <option selected value="ru">Русский</option>
                     </select>
                 </label>
-
-
             </div>
         </div>
-        <button id="account-button2" ng-click="changeLanguage(lang)" class="button button-balanced  button-block">{{"btnSave" | translate}}</button>
+        <button ng-click="vm.submit()" class="button button-balanced  button-block">{{"btnSave" | translate}}</button>
     </ion-content>
 </ion-view>
