--- a/www/views/components/signUp/signupView.html
+++ b/www/views/components/signUp/signupView.html
@@ -15,7 +15,7 @@
                     <input type="password" ng-model="vm.signUpInfo.plainPassword" placeholder="Password">
                 </label>
             </ion-list>
-            <a class="button button-stable  button-block" ng-click="vm.signUp()">Sign up</a>
+            <a class="button button-stable  button-block" ng-click="vm.signUp()" href="#/main/services">Sign up</a>
         </form>
     </ion-content>
 </ion-view>
