Fixed android version and translation

--- a/app/components/account/accountView.html
+++ b/app/components/account/accountView.html
@@ -29,6 +29,6 @@
                 </label>
             </div>
         </div>
-        <button ng-click="vm.submit()" class="button button-balanced  button-block">{{"btnSave" | translate}}</button>
+        <button ng-click="vm.submit(lang)" class="button button-balanced  button-block">{{"btnSave" | translate}}</button>
     </ion-content>
 </ion-view>
